--- a/moovsmart/src/app/components/admin-property-details/admin-property-details.component.html
+++ b/moovsmart/src/app/components/admin-property-details/admin-property-details.component.html
@@ -78,6 +78,9 @@
         <p><strong>Részletes leírás:</strong></p>
         <p>{{propertyDetails?.description}}</p>
 
+        <button class="btn accept-button" (click)="approve(propertyDetails?.id)">Jóváhagyás</button>
+        <button class="btn reject-button" (click)="askingForSure(propertyDetails?.id)">Elutasítás</button>
+
 
         <!-- Modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -98,8 +101,7 @@
                 </div>
             </div>
         </div>
-        <button class="btn accept-button" (click)="approve(propertyDetails?.id)">Jóváhagyás</button>
-        <button class="btn reject-button" (click)="askingForSure(propertyDetails?.id)">Elutasítás</button>
+
     </div>
 </div>
 
@@ -118,10 +120,10 @@
                 <p id="error-message">Biztos benne, hogy nem hagyja jóvá az ingatlant?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn confirmationButton" data-dismiss="modal"
+                <button type="button" class="btn accept-button" data-dismiss="modal"
                         (click)="delete(propertyToDelete)">Igen
                 </button>
-                <button type="button" class="btn cancelButton" data-dismiss="modal" (click)="closeDial()">Nem</button>
+                <button type="button" class="btn reject-button" data-dismiss="modal" (click)="closeDial()">Nem</button>
             </div>
         </div>
     </div>
