--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -1,7 +1,9 @@
 <div class="container">
+    <h3 class="center">Admin kezelő felület</h3>
     <div class="row">
         <div class="col-sm-4">
-            <button type="button" class="btn approval" (click)="moveToApproval()">Ingatlan jóváhagyása</button>
+            <button type="button" class="btn approval" (click)="moveToApproval()">Ingatlan jóváhagyása
+                <span *ngIf="propertyForApprove > 0" class="badge badge-light">{{propertyForApprove}}</span></button>
         </div>
         <div class="col-sm-4">
             <button type="button" class="btn userHandling" (click)="moveToUserHandling()">Felhasználók kezelése</button>
@@ -37,17 +39,18 @@
             </form>
         </div>
         <div *ngIf="buttonPushed === 2">
-            <div>Név:</div>
-            {{userForHandling?.userName}}
+            <div>Név:</div><div id="bold" [ngStyle]="userForHandling?.active && {'color':'green'} ||
+           !userForHandling?.active && {'color':'#E7717D'}">
+            {{userForHandling?.userName}}</div>
             <hr>
             <div>Státusz:</div>
             <div *ngIf="userForHandling?.active">Aktív</div>
             <div *ngIf="userForHandling?.active === false">Inaktív</div>
 
             <div [ngStyle]="{'display':display}">
-                <button class="btn" (click)="listPropertiesOfUser(userForHandling.mail)">Felhasználó ingatlanjainak listázása</button>
-                <button *ngIf="userForHandling?.active === true" class="btn" (click)="askForBanUser(userForHandling?.id)">Felhasználó tiltása</button>
-                <button *ngIf="userForHandling?.active === false" class="btn" (click)="unBanUser(userForHandling?.id)">Tiltás feloldása</button>
+                <button class="btn archiveList" (click)="listPropertiesOfUser(userForHandling.mail)">Felhasználó ingatlanjainak listázása</button>
+                <button *ngIf="userForHandling?.active === true" class="btn userHandling" (click)="askForBanUser(userForHandling?.id)">Felhasználó tiltása</button>
+                <button *ngIf="userForHandling?.active === false" class="btn approval" (click)="unBanUser(userForHandling?.id)">Tiltás feloldása</button>
             </div>
         </div>
 
@@ -156,10 +159,10 @@
                 <p id="error-message">Biztos benne, hogy tiltja a felhasználót?</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn confirmationButton" data-dismiss="modal"
+                <button type="button" class="btn approval" data-dismiss="modal"
                         (click)="banUser(userIdForBan)">Igen
                 </button>
-                <button type="button" class="btn cancelButton" data-dismiss="modal" (click)="closeDial()">Nem</button>
+                <button type="button" class="btn userHandling" data-dismiss="modal" (click)="closeDial()">Nem</button>
             </div>
         </div>
     </div>
