saving picture is working

--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container jumbotron">
     <div class="row">
         <div class="col-sm-4">
             <button type="button" class="btn approval" (click)="moveToApproval()">Ingatlan jóváhagyása</button>
