--- a/moovsmart/src/app/components/footer/footer.component.html
+++ b/moovsmart/src/app/components/footer/footer.component.html
@@ -10,9 +10,10 @@
                 <p></p>
             </div>
             <div class="col-4" id="right-holder-div">
-                <p class="tag-p">Moovsmart, Moovsmart-ingatlan, Moovsmart ingatlan, aukció, ingatlan aukció, ingatlanok jó áron, belvárosi ingatlan portál
-                ingatlan bazár, Budapest ingatlan, ingatlan eladás, ingatlan vétel, ingatlan regisztráció<br>
-                ellenőrzött ingatlanok</p>
+                <p class="tag-p">Moovsmart, Moovsmart-ingatlan, Moovsmart ingatlan, aukció, ingatlan aukció, ingatlanok
+                    jó áron, belvárosi ingatlan portál
+                    ingatlan bazár
+                    ellenőrzött ingatlanok</p>
             </div>
         </div>
     </div>
