--- a/moovsmart/src/app/components/profil-list/profil-list.component.css
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.css
@@ -173,7 +173,7 @@ hr {
 
 #img-holder-row {
     text-align: center;
-    background-color: antiquewhite;
+    background-color: lightgrey;
     padding: 3px;
 }
 
