--- a/moovsmart/src/app/components/property-list/property-list.component.css
+++ b/moovsmart/src/app/components/property-list/property-list.component.css
@@ -145,7 +145,7 @@
 
 #img-holder-row{
     text-align: center;
-    background-color:  antiquewhite;
+    background-color:  lightgrey;
     padding: 3px;
 }
 
