--- a/moovsmart/src/app/components/property-details/property-details.component.css
+++ b/moovsmart/src/app/components/property-details/property-details.component.css
@@ -25,9 +25,7 @@
     display: inline;
 }
 
-
 .container {
-    max-width: 50%;
     margin-bottom: 2%;
     background-color: white;
     padding-bottom: 3px;
@@ -74,4 +72,12 @@ a:hover {
 }
 #col-button{
     text-align: right;
+}
+
+#status-actual{
+    margin-right: 0;
+    margin-left: auto;
+}
+#status-span{
+    margin-left: 20%;
 }
