--- a/moovsmart/src/app/components/property-details/property-details.component.html
+++ b/moovsmart/src/app/components/property-details/property-details.component.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="col">
             <h5><strong>Ingatlan bemutatása</strong></h5></div>
-            <div class="col"></div>
+            <div class="col"><span id="status-span">statusz: </span><span id="status-actual">{{propertyDetails?.status}}</span></div>
             <div class="col" id="col-button">
                 <button *ngIf="reagistratedUser" type="button" class="btn btn-secondary" (click)="edit(propertyDetails.id)">
                     Szerkesztés <i class="fas fa-pencil-alt"></i></button>
@@ -44,6 +44,7 @@
             <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal">
                 <strong>Mutassa térképen</strong>
             </button>
+
         </p>
         <hr>
 
