--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -6,7 +6,7 @@
     <div>
         <div class="d-flex justify-content">
             <button class="btn btn-secondary" [class.button-touched]="!queryStatus"
-                    (click)="refreshPropertyList()">Hirdetéseim
+                    (click)="refreshPropertyList()">Aktiv Hirdetéseim
             </button>
             <button class="btn btn-secondary" [class.button-touched]="queryStatus"
                     (click)="getHoldingList()">Elfogadásra vár
