--- a/moovsmart/src/app/components/registration/registration.component.html
+++ b/moovsmart/src/app/components/registration/registration.component.html
@@ -96,7 +96,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-info" data-dismiss="modal" (click)="routeToPropertyList()">Vissza az Ingatlanokhoz</button>
-                <button type="button" class="btn" data-dismiss="modal" (click)="closeModalDialog()">Close</button>
+                <button type="button" class="btn" data-dismiss="modal" (click)="closeModalDialog()">Bezár</button>
             </div>
         </div>
     </div>
