--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container jumbotron">
     <h3 class="center">Admin kezelő felület</h3>
     <div class="row">
         <div class="col-sm-4">
