Change text in admin.component.html

--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -20,7 +20,7 @@
             <hr>
             <div id="mainDiv">
                 <div *ngIf="propertyListItemModels === undefined || propertyListItemModels.length === 0" id="emptydb">
-                    <div id="emptydbmessage">Ebben az idősávban nincs jóváhagyásra váró ingatlan.</div>
+                    <div id="emptydbmessage">Jelenleg nincs jóváhagyásra váró ingatlan.</div>
                 </div>
             </div>
         </div>
