--- a/moovsmart/src/app/components/admin/admin.component.css
+++ b/moovsmart/src/app/components/admin/admin.component.css
@@ -31,12 +31,9 @@
 }
 
 #emptydb, #emptyArchive {
-    top: 0;
-    left: 0;
+    position: relative;
     text-align: center;
 
-    min-width: 100%;
-    min-height: 100%;
 }
 
 #mainDiv {
@@ -159,12 +156,13 @@
 }
 
 #detail-button-div{
+    float: left;
     margin-bottom: 25%;
     margin-top: 5%;
 }
 
 #date-div{
-    text-align: right;
+    text-align: left;
 }
 
 #img-holder-row{
@@ -177,7 +175,7 @@
     margin-left: 5%;
     margin-right: 5%;
 }
-#area-div, #price-div{
+#area-div, #price-div, #status-div, #email-div{
     margin-bottom: 5%;
 }
 
