--- a/moovsmart/src/app/components/admin/admin.component.html
+++ b/moovsmart/src/app/components/admin/admin.component.html
@@ -97,15 +97,16 @@
                             </div>
                             <div class="col-sm-9">
                                 <div class="row">
-                                    <div class="col-sm">
+                                    <div class="col-sm-5">
                                         <h5>{{property.name}}</h5>
                                         <div id="area-div"><strong>Terület</strong>: {{property.area}} m<sup>2</sup>
                                         </div>
                                         <div id="price-div"><strong>Ár</strong>: {{property.price}} M ft</div>
-                                        <div><strong>Státusz</strong>: {{property.status}}
+                                        <div id="status-div"><strong>Státusz</strong>: {{property.status}}
                                         </div>
+                                        <div id="email-div"><strong>Email</strong>: {{property.owner}}</div>
                                     </div>
-                                    <div class="col-sm">
+                                    <div class="col-sm-3">
                                         <div>
                                             <strong>Szobák száma</strong>: {{property.numberOfRooms}}
                                         </div>
@@ -113,7 +114,7 @@
                                     <div class="col-sm">
                                         <div id="detail-button-div" class="d-flex justify-content-center">
                                             <div
-                                                *ngIf="(buttonPushed === 1 || buttonPushed === 2) && property.status === 'elfogadásra vár'">
+                                                *ngIf="(buttonPushed > 0)">
                                                 <button id="detail-button" class="btn" (click)="details(property.id)">
                                                     Részletek
                                                 </button>
