--- a/moovsmart/src/app/components/admin/admin.component.css
+++ b/moovsmart/src/app/components/admin/admin.component.css
@@ -53,6 +53,7 @@
 }
 
 #emptyArchiveMessage{
+    position: absolute;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
@@ -74,7 +75,7 @@
     text-align: right;
 }
 
-#detail-button {
+#detail-button, #replace-button {
     background-color: #7E685A;
     color: white;
     width: 150px;
@@ -155,9 +156,9 @@
     padding: 2%;
 }
 
-#detail-button-div{
+#detail-button-div, #replace-button-div{
     float: left;
-    margin-bottom: 25%;
+    margin-bottom: 20%;
     margin-top: 5%;
 }
 
