profil-list, page number

--- a/moovsmart/src/app/components/profil-list/profil-list.component.html
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.html
@@ -83,7 +83,7 @@
         <p>Jelenleg nincs ingatlan a saját listában</p>
     </div>
 
-    <div id="pager" class="d-flex justify-content-center">
+    <div *ngIf="propertyListItemModels.length > 0" id="pager" class="d-flex justify-content-center">
         <div id="leftArrow" *ngIf="actualPageNumber > 1" (click)="pageLeft()" title="lapozz">
             <i class="fas fa-angle-left"></i>
         </div>
