--- a/moovsmart/src/app/components/footer/footer.component.html
+++ b/moovsmart/src/app/components/footer/footer.component.html
@@ -1,16 +1,13 @@
 <div class="container-fluid">
     <div class="main-holder-div">
         <div class="row">
-            <div class="col-4" id="left-holder-div">
-                Impersszum
-            </div>
-            <div class="col-4" id="mid-holder-div">
+            <div class="col-6" id="mid-holder-div">
                 <p class="tag-p">Technikai segítség</p>
-                <p class="tag-p">mail: moovsmartproject@gmail.com</p>
+                <p class="tag-mail">moovsmartproject@gmail.com</p>
                 <p></p>
             </div>
-            <div class="col-4" id="right-holder-div">
-                <p class="tag-p">Moovsmart, Moovsmart-ingatlan, Moovsmart ingatlan, aukció, ingatlan aukció, ingatlanok
+            <div class="col-6" id="right-holder-div">
+                <p class="tag-p">Moovsmart, Moovsmart ingatlan, aukció, ingatlan aukció, ingatlanok
                     jó áron, belvárosi ingatlan portál
                     ingatlan bazár
                     ellenőrzött ingatlanok</p>
