--- a/moovsmart/src/app/components/admin/admin.component.css
+++ b/moovsmart/src/app/components/admin/admin.component.css
@@ -174,7 +174,7 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    background-color:  antiquewhite;
+    background-color:  lightgrey;
     padding: 3px;
 }
 
