--- a/moovsmart/src/app/components/profil-list/profil-list.component.css
+++ b/moovsmart/src/app/components/profil-list/profil-list.component.css
@@ -71,10 +71,10 @@ hr {
 }
 
 .defaultPicture {
+    height: 100%;
     width: 100%;
     max-width: 200px;
-    height: 100%;
-    max-height: 150px;
+    max-height: 170px;
 }
 
 #mainDiv {
@@ -91,13 +91,6 @@ hr {
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.defaultPicture {
-    width: 100%;
-    max-width: 200px;
-    height: 100%;
-    max-height: 150px;
 }
 
 #emptyPicture {
@@ -175,6 +168,14 @@ hr {
     text-align: center;
     background-color: lightgrey;
     padding: 3px;
+    margin-top: auto;
+    margin-bottom: auto;
+
+}
+
+#img-div-holder {
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 #edit-icon {
