--- a/moovsmart/src/app/components/footer/footer.component.css
+++ b/moovsmart/src/app/components/footer/footer.component.css
@@ -30,4 +30,13 @@
      margin-right: 2%;
  }
  .main-holder-div{
+position: fixed;
+     bottom: 30px;
+     width: 100%;
+ }
+
+ #end-div {
+     position: fixed;
+     bottom: -5px;
+     width: 100%;
  }
